kustomize/filebrowser/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filebrowser
spec:
  selector:
    app.kubernetes.io/name: filebrowser
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
