kustomize/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: files
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: filebrowser
      port:
        number: 80
  tls:
    - hosts:
        - files
